--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <tool-navbar>
             <template slot='left'>
                 <li class="nav-item navthing">
-                    <a class='btn btn-outline-secondary' target='_blank' href='https://github.com/magnusmanske/cradle' tt='git'></a>
+                    <a class='btn btn-outline-secondary' target='_blank' href='https://github.com/magnusmanske/pauken' tt='git'></a>
                 </li>
                 <li class="nav-item navthing">
-                    <a id='help_page' class='btn btn-outline-info' target='_blank' href='#' tt='help'></a>
+                    <a id='help_page' class='btn btn-outline-info' target='_blank' href='https://www.wikidata.org/wiki/Wikidata:Pauken' tt='help'></a>
                 </li>
                 <li class="nav-item navthing" id='working'>
                     <img src='https://upload.wikimedia.org/wikipedia/commons/c/cd/Vector_Loading_fallback.gif' />
